--- a/src/assets/CreateEmployee.css
+++ b/src/assets/CreateEmployee.css
@@ -239,3 +239,16 @@ input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+
+.logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.logo-container img {
+    max-width: 80px;
+   
+    height: auto;
+}
